# NumericalPolitics

./: .gitignore  CMakeLists.txt  README.md  _config.yml  index.md  semantics.md
_layouts/: default.html
doc/: EvolutionOfCulture.tex  abstractionAndCooperation.aux  abstractionAndCooperation.tex  contractualNetworks.txt  contractualNetworks.txt~  emergence.txt  emergence.txt~  feudalism.txt  feudalism.txt~  method.txt  method.txt~  methodology.txt  networkedSociety.txt  networkedSociety.txt~  notes.txt  numericalPolitics.aux  numericalPolitics.tex  numericalPolitics.toc  occupationVectorAsComputation.aux  occupationVectorAsComputation.tex  occupationVectorAsComputation.txt  occupationVectorAsComputation.txt~  onModelReduction.aux  onModelReduction.tex  ontology.txt  socialNorms.aux  socialNorms.tex  socialRoles.txt  socialRoles.txt~  standardSocieties.aux  standardSocieties.tex  template.tex
include/: mlpack-4.1.0  mlpack-4.2.0
notes/: optimisation.txt
src/: Experiment1.cpp  Experiment1.h  Experiment2.cpp  Experiment2.h  Experiment3.cpp  Experiment3.h  Experiment4.h  Experiment5.h  Experiment6.h  main.cpp  tests.h
src/DeselbyStd/: BoundedInteger.h  DiscreteObjectDistribution.h  MutableCategoricalArray.h  OptionalDouble.h  random.h  runtimetupleutils.h  stlstream.h  traits.h  tupleutils.h  typeutils.h
src/abm/: ActionMask.h  Agent.h  ArrayChannel.h  Body.h  CallbackUtils.h  Channel.cpp  Channel.h  CommunicationChannel.h  ComputationalGraph.h  Concepts.h  DQN.h  DQNPolicy.cpp  DQNPolicy.h  DiscreteEventSimulation.h  Events.h  ExponentialDecayExplorationPolicy.h  (+24 more)
(+75 files in other folders)
